--- a/app/src/main/res/layout/boundary.xml
+++ b/app/src/main/res/layout/boundary.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="top"
+    android:layout_gravity="fill"
+    android:orientation="vertical"
     android:paddingBottom="0dp"
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
@@ -12,7 +13,6 @@
         android:id="@+id/bd"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:background="@drawable/top_border"
         android:padding="0dp">
 
